--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jquery": "^3.4.1",
     "jspdf": "^2.3.1",
     "ngx-material-timepicker": "^5.5.3",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.4.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.9.1"
